<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_feed_24dp"
            android:title="@string/feed" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_folder_24dp"
            android:title="@string/files" />
        <item
            android:id="@+id/nav_offline"
            android:icon="@drawable/ic_offline_24dp"
            android:title="@string/offline" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_trash_24dp"
            android:title="@string/trash" />
    </group>

    <group
        android:id="@+id/menu_prefs"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_clear_space"
            android:checkable="true"
            android:icon="@drawable/ic_clear_space_24dp"
            android:title="@string/clear_space">
        </item>
    </group>
</menu>
